[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Komodo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/ComodoWalk.png" type="Texture" id=2]
[ext_resource path="res://Sprites/ComodoAttack.png" type="Texture" id=3]
[ext_resource path="res://Sounds/enemytookdmg.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.615, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.783, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 92, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 184, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 276, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 368, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 460, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 92, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 184, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 276, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 368, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 460, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 552, 0, 92, 23 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 644, 0, 92, 23 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 9 ), SubResource( 9 ), SubResource( 9 ) ],
"loop": true,
"name": "Attack",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=18]
radius = 39.202

[node name="Komodo" type="KinematicBody2D" groups=[
"enemy",
"komodo",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.707, 0 )
shape = SubResource( 1 )

[node name="HitBox" type="Area2D" parent="."]
position = Vector2( -5, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 7.398, 0 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "Attack"
frame = 2

[node name="Detection" type="Area2D" parent="."]
position = Vector2( -5, 0 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2( 7.651, 0 )
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="TookDmg" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered" flags=3]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited" flags=3]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout" flags=3]
